add classes to portfolio.html

--- a/css/style.css
+++ b/css/style.css
@@ -100,13 +100,16 @@ img{
     color: var(--accent-color);
 }
 /*********************** Main-Studio ********************** */
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
 
+}
 /* **** Effective-solutions **** */
 .effective-solutions{
     background-color: #2F303A;
     text-align: center;
 
-    margin-bottom: 94px;
     padding-top: 200px;
     padding-bottom: 200px;
 }
@@ -143,9 +146,7 @@ img{
 }
 
 /********** our-peculiarities *********/
-.our-peculiarities{
-    margin-bottom: 94px;
-}
+
 
 .visually-hidden {
     position: absolute;
@@ -188,7 +189,7 @@ img{
 
 /* ******** our-works ******** */
 .our-works{
-    padding-bottom: 94px;
+    padding-top: 0;
 }
 
 .section-title{
@@ -205,12 +206,12 @@ img{
 }
 
 .our-works-example-item{
-    width: calc((100%-60px)/3);
-    display: inline-flex;
+    width: calc((100% - 60px ) / 3);
+    margin-right: 30px;
 }
 
-.our-works-example-item:not(:first-child){
-    margin-left: 30px;
+.our-works-example-item:nth-child(3n){
+    margin-right: 0;
 }
 
 /* ********* our-team ******** */
@@ -221,17 +222,20 @@ img{
 
 .our-team{
     background-color: #f5f4fa;
-    padding-top: 94px;
-    padding-bottom: 94px;
 }
 
 .team-memders-item{
     list-style: none;
     text-align: center;
 
-    width: calc((100%-90px)/4);
     background-color:var(--background-main-color);
     padding-bottom: 30px;
+
+
+    width: calc((100% - 90px) / 4);
+    
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team-memders-item:not(:first-child){
@@ -263,7 +267,16 @@ img{
 
 .filter-buttons{
     list-style: none;
+    display: flex;
+    justify-content: center;
+
+    margin-bottom: 50px;
 }
+
+.filter-buttons-item:not(:first-child) {
+    margin-left: 8px;
+}
+
 .filter-button{
 
     font-family: 'Roboto', sans-serif;
@@ -276,7 +289,11 @@ img{
     border: none;
 
     cursor: pointer;
+
+    padding: 6px 22px;
+
 }
+
 .filter-button:hover,
 .filter-buttons:focus{
     color: var(--white-color);
@@ -290,6 +307,23 @@ img{
 
 .portfolio-examples{
     list-style: none;
+
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.portfolio-examples-item:not(:nth-child(3n+1)){
+    margin-left: 30px;
+}
+.portfolio-examples-item:not(:nth-last-child(-n+3)){
+    margin-bottom: 30px;
+}
+
+.portfolio-example-item-footer{
+    padding: 20px 24px;
+    border-left: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
 }
 
 .portfolio-examples-title{
